# cfg

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
cfg/: __init__.py  get_config.py
test/: test_dummy.py
test/test_data/config/: test-application.toml
